[package]
name = "win_clear"
version = "1.0.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_System_EventLog",
    "Win32_System_Registry",
] }

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
opt-level = "s"
debug = false
panic = "abort"
strip = "symbols"
codegen-units = 1
